# peg-solitaire-rust

./: .gitignore  .project  Cargo.toml  build.rs
src/: BoardSet.rs  board.rs  boards.rs  boardset.rs  description.rs  generated.rs  generator.rs  llvm.rs  main.rs  naive.rs  opencl.rs  solver.rs  utils.rs
